# perch-hoplite

./: README.md  generate_requirements.sh  pyproject.toml  requirements-jax.txt  requirements.txt
.github/workflows/: ci_uv.yml  ci_uv_with_jax.yml  publish.yml
perch_hoplite/agile/: 02_agile_modeling.ipynb  99_migrate_db.ipynb  classifier.py  classifier_data.py  convert_legacy.py  embed.py  embedding_display.py  ingest_annotations.py  query_known_species.py  source_info.py  xenocanto_known_species.py
perch_hoplite/agile/tests/: classifier_data_test.py  embedding_display_test.py  ingest_annotations_test.py  xenocanto_known_species_test.py
perch_hoplite/db/: README.md  duckdb_usearch_impl.py  in_mem_impl.py  interface.py  sqlite_usearch_impl.py
perch_hoplite/db/tests/: hoplite_test.py  test_utils.py
