
[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "perch-hoplite"
version = "1.0.0.dev8"
description = "Tooling for agile modeling on large machine perception embedding databases."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {file = "LICENSE"}
authors = [
    {name = "tom denton", email="tomdenton@google.com"},
    {name = "Vincent Dumoulin", email="vdumoulin@google.com"},
    {name = "Jeninka Hamer", email="hamer@google.com"},
    {name = "Bart van Merriënboer", email="bartvm@google.com"},
    {name = "Frank Zhang", email="zhangfrank@google.com"},
    {name = "Ștefan Istrate", email="istefan@google.com"},
]
maintainers = [
    {name = "Perch Team", email="chirp-bio@google.com"},
]
dependencies = [
    "absl-py>=1.4.0,<2.0.0",
    "ml-collections>=0.1.1,<0.2.0",
    "etils[epath]>=1.5.0,<2.0.0",
    "imageio>=2.5.0,<3.0.0",
    "matplotlib>=3.6.1,<4.0.0",
    "notebook>=7.4,<8.0",
    "librosa>=0.11,<0.12",
    "numpy>=2.0,<3.0",
    "usearch>=2.17,<3.0",
    "pandas[gcp]>=2.1.1,<3.0.0",
    "ipywidgets>=8.1,<9.0",
    "kagglehub>=0.3,<0.4",
    "tensorflow>=2.20,<3.0",
]

[project.optional-dependencies]
jax = [
    "flax>=0.10,<0.11",
    "jax>=0.6,<0.7",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "agile",
    "db",
    "taxonomy",
    "zoo",
    "audio_io.py",
    "path_utils.py",
]
